--- a/pom.xml
+++ b/pom.xml
@@ -64,5 +64,6 @@
   <modules>
     <module>project-b</module>
     <module>project-c</module>
+    <module>project-d</module>
   </modules>
 </project>
